plugins/kotlin/idea/tests/testData/multiplatform/aliasesTypeMismatch/commonLibrary/lib.kt
public expect open class <!LINE_MARKER("descr='Is subclassed by MyCancelException [common] MyIllegalStateException [commonLibrary] OtherException [common]  Click or press ... to navigate'"), LINE_MARKER("descr='Has actuals in JVM'")!>MyException<!>

public expect open class <!LINE_MARKER("descr='Is subclassed by MyCancelException [common] OtherException [common]  Click or press ... to navigate'"), LINE_MARKER("descr='Has actuals in JVM'")!>MyIllegalStateException<!> : MyException
